--- a/js-examples/variables.html
+++ b/js-examples/variables.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-</head>
 <body>
     <script>
-        var msg = "Welcome to javascript mastery path!";
-        console.log(msg);
+        var a = 5, b = 3;
+
+        console.log(a + " + " + b + " = " + (a+b));
+        console.log(a + " - " + b + " = " + (a-b));
+        console.log(a + " * " + b + " = " + (a*b));
+        console.log(a + " / " + b + " = " + (a/b));
+        console.log(a + " % " + b + " = " + (a%b));
     </script>
 </body>
 </html>
