math file added

--- a/js-examples/alert.html
+++ b/js-examples/alert.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <body>
     <script>
+        alert("See console tab also.")
+        prompt("You like JS or not (Leave blank if not)") ? console.log("I TOO LOVE JS!") : console.log("YOU JUST NEED MORE PRACTICE FOR JS!")
         console.log("Message logged.");
         console.info("Info logged.");
         console.warn("Beware of such warning!");
