variable array  added

--- a/js-examples/typeof.html
+++ b/js-examples/typeof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">S
+<html lang="en">
 <body>
     <script>
         var a = 5;
@@ -7,12 +7,14 @@
         var c = true;
         var d = null;
         var e;
+        var f = ['ajax', 'bootstrap', 'css', 'd3js'];
 
-        console.log("typeof("+a+") = " + typeof(a));
-        console.log("typeof("+b+") = " + typeof(b));
-        console.log("typeof("+c+") = " + typeof(c));
-        console.log("typeof("+d+") = " + typeof(d)); // typeof(null) give object
-        console.log("typeof("+e+") = " + typeof(e));
+        console.log("typeof("+a+") = " + typeof(a)); //nubmer
+        console.log("typeof("+b+") = " + typeof(b)); //string
+        console.log("typeof("+c+") = " + typeof(c)); //boolean
+        console.log("typeof("+d+") = " + typeof(d)); //object
+        console.log("typeof("+e+") = " + typeof(e)); //undefined
+        console.log("typeof("+f+") = " + typeof(f)); //object
     </script>
 </body>
 </html>
