--- a/js-examples/object-literals_object-constructors.html
+++ b/js-examples/object-literals_object-constructors.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <body>
     <script>
+    // Objects - Math, Object, String, Boolean, Array, Date, Number
         function Friend(name, tshirtColor) {
             this.name = name;
             this.tshirtColor = tshirtColor;
