--- a/examples/functions.html
+++ b/examples/functions.html
@@ -26,6 +26,32 @@
             return num1 + num2;
         }
         console.log(sum(1,2)); // 3
+
+
+        console.log('--------------');
+
+        //ES6: arrow functions
+
+        // var circleArea = function circleArea(r) {
+        //     var PI = 3.14;
+        //     var area = PI * r * r;
+        //     return area;
+        // }
+        let circleArea = (r) => {
+            const PI = 3.14;
+            let area = PI * r * r;
+            return area;
+        }
+        console.log(circleArea(2));
+
+        // If the function has a single statement, we can use a simpler version as well, by omittin
+        // the keyword return
+
+        // var circleArea2 = function circleArea2(r) {
+        //     return 3.14 * r * r;
+        // }
+        let circleArea2 = (r) => 3.14 * r * r;
+        console.log(circleArea2(10));        
     </script>
 </body>
 </html>
