one object extra file deleted

--- a/examples/objects.html
+++ b/examples/objects.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <body>
     <script>
+        // Objects - Math, Object, String, Boolean, Array, Date, Number
+        
         /* Object example 1 */
 
         var person = new Object();
