--- a/examples/objects.html
+++ b/examples/objects.html
@@ -3,7 +3,7 @@
 <body>
     <script>
         // Objects - Math, Object, String, Boolean, Array, Date, Number
-        
+
         /* Object example 1 */
 
         var person = new Object();
@@ -49,6 +49,50 @@
 
         book1.printDetails();
         book2.printDetails();
+
+
+        console.log('-----------------------')
+
+        // *******************************
+        // ENHANCED OBJECT PROPERTIES
+        // *******************************
+
+        // Destructuring Assignment + Property Shorthand
+        var [x, y] = ['a', 'b'];
+        var obj = { x, y };
+        console.log(obj); // { x: "a", y: "b" }
+
+        // 
+        [x, y] = [y, x];
+        console.log([x, y], [y, x]);
+        var temp = x;
+        x = y;
+        y = temp;
+
+        //code above is the same as
+        var x = 'a';
+        var y = 'b';
+        var obj2 = { x: x, y: y };
+        console.log(obj2); // { x: "a", y: "b" }
+
+
+        // Method Properties
+        var hello = {
+            name : 'abcdef',
+            printHello(){
+                console.log('Hello');
+            }
+        }
+        console.log(hello.printHello());
+
+        //code above is the same as:
+        var hello2 = {
+            name: 'abcdef',
+            printHello: function printHello() {
+                console.log('Hello');
+            }
+        };
+        console.log(hello2.printHello());
     </script>
 </body>
 </html>
