folder name changed reference -> references

--- a/references/arrays.html
+++ b/references/arrays.html
@@ -55,7 +55,15 @@
         console.log('array.reverse():         ' + array.reverse()); 
         console.log('array:                   ' + array);
 
+        console.log('-----------------------------')
 
+        var numbers = [0,1,2,3,4,5];
+
+        // ADD A NEW ELEMENT TO THE LAST
+
+        // manually
+        numbers[numbers.length] = 10;
+        console.log(numbers);
     </script>
 </body>
 </html>
