--- a/references/arrays.html
+++ b/references/arrays.html
@@ -46,15 +46,6 @@
         // console.log('array.slice(arg):        ' + array.slice(2));
         console.log('array:                   ' + array);
 
-        console.log('array.concat(arr):       ' + array.concat(array2));
-        console.log('array:                   ' + array);
-
-        console.log('array.sort():            ' + array.sort());
-        console.log('array:                   ' + array);
-
-        console.log('array.reverse():         ' + array.reverse()); 
-        console.log('array:                   ' + array);
-
         console.log('-----------------------------')
 
         var numbers = [0,1,2,3,4,5];
@@ -90,6 +81,96 @@
         // using method shift
         numbers.shift()
         console.log(numbers); // (9) [0, 1, 2, 3, 4, 5, 6, 7, undefined]
+
+        console.log('REMOVING A ELEMENT FROM THE LAST');
+        // manually
+        delete numbers[numbers.length-1];
+        console.log(numbers); // (9) [0, 1, 2, 3, 4, 5, 6, 7, empty]
+
+        // using method pop
+        numbers.pop()
+        console.log(numbers); // (8) [0, 1, 2, 3, 4, 5, 6, 7]
+
+        console.log('-----------------------------')
+        
+        // References for JavaScripts array methods
+        var zero = 0;
+        var positiveNumbers = [1,2,3];
+        var negativeNumbers = [-3,-2,-1];
+        var isEven = function (x) {
+            console.log(x, (x % 2 == 0));
+            return (x % 2 == 0) ? true : false; // OR (x % 2 == 0)
+        };
+
+        console.log('-> concat');
+        // joins multiple arrays
+        var numbers = negativeNumbers.concat(zero, positiveNumbers);
+        console.log(numbers);
+
+        console.log('-> every');
+        // iterate every element of the array, verifying a desired codition(function) until FALSE is returned
+        var numbers = [2,4,5,];
+        numbers.every(isEven);
+
+        console.log('-> some');
+        // iterate every element of the array, verifying a desired codition(function) until TRUE is returned
+        var numbers = [1,3,4,5];
+        numbers.some(isEven);
+
+        console.log('-> forEach');
+        // executes a specific function on each element of the array
+        var numbers = [1,2,3];
+        numbers.forEach(isEven);        
+
+        console.log('-> filter');
+        // creates an array with each element that evaluates to true in the function provided
+        var numbers = [1,2,3,4,5,6];
+        var evenNumbers = numbers.filter(isEven);
+        console.log(evenNumbers);
+
+        console.log('-> map');
+        // creates an array with storing the return value coming from the function provided
+        var numbers = [1,2,3,4,5,6];
+        var myMap = numbers.map(isEven);
+        console.log(myMap);
+
+        console.log('-> reduce');
+        // here its used to some all the values
+        var numbers = [1,2,3];
+        console.log(numbers.reduce(function(previous, current, index){
+            return previous + current;
+        }));
+
+        console.log('-> join');
+        var numbers = [1,2,3];
+        console.log(numbers.join('|'));
+
+        console.log('-> sort');
+        // sort the items in lexic, modifying the original array
+        var numbers = [2,1,3];
+        numbers.sort();
+        console.log(numbers);
+
+        console.log('-> reverse');
+        // last items becomes first, modifying the original array
+        var numbers = [2,1,3];
+        numbers.reverse();
+        console.log(numbers);        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
