--- a/references/arrays.html
+++ b/references/arrays.html
@@ -135,7 +135,7 @@
         console.log(myMap);
 
         console.log('-> reduce');
-        // here its used to some all the values
+        // here its used to sum all the values
         var numbers = [1,2,3];
         console.log(numbers.reduce(function(previous, current, index){
             return previous + current;
@@ -145,11 +145,25 @@
         var numbers = [1,2,3];
         console.log(numbers.join('|'));
 
-        console.log('-> sort');
-        // sort the items in lexic, modifying the original array
-        var numbers = [2,1,3];
-        numbers.sort();
-        console.log(numbers);
+        console.log('-> indexOf');
+        // search the array for specific elements and returns its position
+        var numbers = [1,2,3,1];
+        console.log(numbers.indexOf(1));        
+
+        console.log('-> lastIndexOf');
+        // search the array for specific elements and returns its last position
+        var numbers = [1,2,3,1];
+        console.log(numbers.lastIndexOf(1));        
+
+        console.log('-> toString');
+        // returns the array as a string
+        var numbers = [1,2,3,1];
+        console.log(numbers.toString());        
+
+        console.log('-> valueOf');
+        // returns itself
+        var numbers = [1,2,3,1];
+        console.log(numbers.valueOf());        
 
         console.log('-> reverse');
         // last items becomes first, modifying the original array
@@ -157,6 +171,17 @@
         numbers.reverse();
         console.log(numbers);        
 
+        console.log('-> sort');
+        // sort the items in lexicographically, modifying the original array
+        var numbers = [2,1,3,10];
+        numbers.sort();
+        console.log(numbers);
+
+        var numbers = [2,1,3,10];
+        numbers.sort(function(a,b){
+            return a-b;
+        })
+        console.log(numbers); 
 
 
 
