--- a/references/arrays.html
+++ b/references/arrays.html
@@ -102,102 +102,199 @@
             return (x % 2 == 0) ? true : false; // OR (x % 2 == 0)
         };
 
-        console.log('-> concat');
+        console.log('-> concat  __________');
         // joins multiple arrays
         var numbers = negativeNumbers.concat(zero, positiveNumbers);
         console.log(numbers);
 
-        console.log('-> every');
+        console.log('-> every  __________');
         // iterate every element of the array, verifying a desired codition(function) until FALSE is returned
         var numbers = [2,4,5,];
         numbers.every(isEven);
 
-        console.log('-> some');
+        console.log('-> some  __________');
         // iterate every element of the array, verifying a desired codition(function) until TRUE is returned
         var numbers = [1,3,4,5];
         numbers.some(isEven);
 
-        console.log('-> forEach');
+        console.log('-> forEach  __________');
         // executes a specific function on each element of the array
         var numbers = [1,2,3];
-        numbers.forEach(isEven);        
+        numbers.forEach(isEven);     
 
-        console.log('-> filter');
+        console.log('-> forEach using arrow functions  __________');
+        numbers.forEach(x => {
+            console.log((x % 2 == 0));
+        });           
+
+        console.log('-> filter  __________');
         // creates an array with each element that evaluates to true in the function provided
         var numbers = [1,2,3,4,5,6];
         var evenNumbers = numbers.filter(isEven);
         console.log(evenNumbers);
 
-        console.log('-> map');
+        console.log('-> map  __________');
         // creates an array with storing the return value coming from the function provided
         var numbers = [1,2,3,4,5,6];
         var myMap = numbers.map(isEven);
         console.log(myMap);
 
-        console.log('-> reduce');
+        console.log('-> reduce  __________');
         // here its used to sum all the values
         var numbers = [1,2,3];
         console.log(numbers.reduce(function(previous, current, index){
             return previous + current;
         }));
 
-        console.log('-> join');
+        console.log('-> join  __________');
         var numbers = [1,2,3];
         console.log(numbers.join('|'));
 
-        console.log('-> indexOf');
+        console.log('-> indexOf  __________');
         // search the array for specific elements and returns its position
         var numbers = [1,2,3,1];
         console.log(numbers.indexOf(1));        
 
-        console.log('-> lastIndexOf');
+        console.log('-> lastIndexOf  __________');
         // search the array for specific elements and returns its last position
         var numbers = [1,2,3,1];
         console.log(numbers.lastIndexOf(1));        
 
-        console.log('-> toString');
+        console.log('-> toString  __________');
         // returns the array as a string
         var numbers = [1,2,3,1];
         console.log(numbers.toString());        
 
-        console.log('-> valueOf');
+        console.log('-> valueOf  __________');
         // returns itself
         var numbers = [1,2,3,1];
         console.log(numbers.valueOf());        
 
-        console.log('-> reverse');
+        console.log('-> reverse  __________');
         // last items becomes first, modifying the original array
         var numbers = [2,1,3];
         numbers.reverse();
         console.log(numbers);        
 
-        console.log('-> sort');
-        // sort the items in lexicographically, modifying the original array
+        console.log('-> sort  __________');
+        // sort the items in lexicographically, it assumes all elements are strings, modifying the original array
         var numbers = [2,1,3,10];
         numbers.sort();
-        console.log(numbers);
+        console.log(numbers); // not as expected
 
         var numbers = [2,1,3,10];
         numbers.sort(function(a,b){
             return a-b;
         })
-        console.log(numbers); 
+        console.log(numbers); // as expected
 
+        console.log('-> for..of loop  __________');
+        var numbers = [1,2,3];
+        for (let n of numbers) {
+            console.log((n % 2 == 0) ? 'even' : 'odd');
+        }
 
+        console.log('-> ES6 iterator (@@iterator)  __________');
+        // return the iterator object, when there are no more values to be iterated, the iterator.next() code 
+        // will return {value: undefined, done: true}
+        var numbers = [1,2,3];
+        let iterator = numbers[Symbol.iterator]();
+        console.log(iterator.next()); // {value: 1, done: false}
+        console.log(iterator.next().value); // 2
+        console.log(iterator.next()); // {value: 3, done: false}
+        console.log(iterator.next()); // {value: undefined, done: true}
 
+        console.log('-> entries  __________');
+        var numbers = [1,2,3];
+        let aEntries = numbers.entries(); //retrieve iterator of key/value
+        console.log(aEntries.next()); // {value: Array(2), done: false}
+        console.log(aEntries.next().value); // (2) [1, 2]
+        console.log(aEntries.next()); // {value: Array(2), done: false}
+        console.log(aEntries.next()); // {value: undefined, done: true}
 
+        console.log('-> keys  __________');
+        var numbers = [1,2,3];
+        let aKeys = numbers.keys(); //retrieve iterator of keys
+        console.log(aKeys.next()); // {value: 0, done: false }
+        console.log(aKeys.next()); // {value: 1, done: false }
+        console.log(aKeys.next()); // {value: 2, done: false }
+        console.log(aKeys.next()); // {value: undefined, done: true}
 
+        console.log('-> values (not available in google chrome)  __________');
+        // var numbers = [1,2,3];
+        // let aValues = numbers.values();
+        // console.log(aValues.next()); // {value: 1, done: false } done false means iterator has more values
+        // console.log(aValues.next()); // {value: 2, done: false }
+        // console.log(aValues.next()); // {value: 3, done: false }
+        // console.log(aValues.next()); // {value: undefined, done: true}
 
+        console.log('-> from  __________');
+        var numbers = [1,2,3];
+        let evens = Array.from(numbers); // {1}
+        console.log(evens);
 
+        let evens2 = Array.from(numbers, x => (x % 2 == 0));
+        console.log(evens2);
 
+        console.log('-> of __________');
+        // creates a new array from the arguments passed to the method
+        let a = Array.of(1);
+        let b = Array.of(1,2,3,4,5,6);
+        let c = Array.of(...b); // same as {1}
+        console.log(a);
+        console.log(b);
+        console.log(c);
 
+        console.log('-> fill __________');
+        // this fills the array with static value
+        var numbers = [1,2,3,4,5,6,7];
 
+        numbers.fill(0);
+        console.log(numbers);
 
+        numbers.fill(2, 1);
+        console.log(numbers);
 
+        numbers.fill(1, 3, 5);
+        console.log(numbers);
 
+        // fill method is great when we want to create an array and initialize its values
+        let ones = Array(6).fill(1);
+        console.log(ones);
 
+        console.log('-> copyWithin __________');
+        // copies a sequence of values of the array into the position of a start index
+        let copyArray = [1, 2, 3, 4, 5, 6];
+        console.log(copyArray);
 
+        copyArray = copyArray.copyWithin(0, 3); //pos 3 value is copied to pos 0
+        console.log(copyArray);
 
+        copyArray = [1, 2, 3, 4, 5, 6];
+        copyArray = copyArray.copyWithin(1, 3, 5); //pos 3-4 values are copied to pos 1-2
+        console.log(copyArray);
+
+        console.log('-> find and findIndex __________');
+        // find method returns the first value of the array that satisfies the proposed condition
+        // findIndex method returns the index of the first value of the array that satisfies the proposed condition
+        // in case the value is not found, it returns undefined
+        var numbers = [1,3,4,5,6,7];
+
+        function multipleOf2(element, index, array) {
+            return (element % 2 == 0) ? true : false;
+        }
+
+        console.log(numbers.find(multipleOf2)); // return value
+        console.log(numbers.findIndex(multipleOf2)); // return index
+
+        console.log('-> ES7: includes __________');
+        // returns true in case an element is found in the array, and false otherwise
+        var numbers = [1,3,4,5,6,7];
+        console.log(numbers.includes(4));
+        console.log(numbers.includes(20));
+
+        var numbers = [7,6,5,4,3,2,1];
+        console.log(numbers.includes(4,5)); // 4 is starting index to search 5
 
     </script>
 </body>
