--- a/references/closure.html
+++ b/references/closure.html
@@ -2,15 +2,32 @@
 <html lang="en">
 <body>
     <script>
-    	var daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+        // JavaScript variables can belong to the local or global scope.
+        // Global variables can be made local (private) with closures.
+        // A closure is a function having access to the parent scope, even after the parent function has closed.
 
-        alert("See console tab also.")
-        prompt("You like JS or not (Leave blank if not)") ? console.log("I TOO LOVE JS!") : console.log("YOU JUST NEED MORE PRACTICE FOR JS!")
-        console.log("Message logged.");
-        console.info("Info logged.");
-        console.warn("Beware of such warning!");
-        console.error("We have to solve this error!");
-        console.table(daysOfWeek);
+        var add = (function () {
+            console.log('outer');
+            var counter = 0;
+            return function () {
+                console.log('inner');
+                return counter += 1;
+            }
+        })();
+        
+        console.log(add()); // 1
+        console.log(add()); // 2
+        console.log(add()); // 3
+
+        // The variable add is assigned the return value of a self-invoking function.
+
+        // The self-invoking function only runs once. It sets the counter to zero (0), and returns a function expression.
+
+        // This way add becomes a function. The "wonderful" part is that it can access the counter in the parent scope.
+
+        // This is called a JavaScript closure. It makes it possible for a function to have "private" variables.
+
+        // The counter is protected by the scope of the anonymous function, and can only be changed using the add function                
     </script>
 </body>
 </html>
