--- a/references/scope.html
+++ b/references/scope.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <body>
     <script>
+    	// Variables created without the keyword var, are always global, even if they are 
+    	// created inside a function.
+    	
 		var myVariable = 'global';
 		myOtherVariable = 'global';
 
