--- a/examples/decimal-to-binary.html
+++ b/examples/decimal-to-binary.html
@@ -46,7 +46,7 @@
             }
 
             while (!remStack.isEmpty()){
-                remStack.print()
+                remStack.print();
                 binaryString += remStack.pop().toString();
             }
 
