--- a/examples/queues/priority-queue-max.html
+++ b/examples/queues/priority-queue-max.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Priority Queue (min)</title>
+    <title>Priority Queue (max)</title>
 </head>
 <body>
     <script>
