5th day challenge accomplished

--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
 			Brick Breakout Game
 		</a>
 	</div>
+	<div>
+		<h1>Examples</h1>
+		<a href="https://justdecodeme.github.io/js/projects/circles-bouncing/index.html">
+			Circles Bouncing
+		</a> 
+		<br>
+		<a href="https://justdecodeme.github.io/js/projects/brick-breakout-game/">
+			Brick Breakout Game
+		</a>
+	</div>
 </body>
 </html>
