--- a/30-Day-Challenge/05 - Flex Panel Gallery/index.html
+++ b/30-Day-Challenge/05 - Flex Panel Gallery/index.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <title>Flex Panels 💪</title>
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
-</head>
-<body>
   <style>
     html {
       box-sizing: border-box;
@@ -29,8 +27,6 @@
       background:#6B0F9C;
       box-shadow:inset 0 0 0 5px rgba(255,255,255,0.1);
       color:white;
-      text-align: center;
-      align-items:center;
       /* Safari transitionend event.propertyName === flex */
       /* Chrome + FF transitionend event.propertyName === flex-grow */
       transition:
@@ -42,14 +38,17 @@
       background-position:center;
       flex: 1;
       justify-content: center;
+      align-items:center;
       display: flex;
       flex-direction: column;
     }
+    
     .panel1 { background-image:url(img/1.jpg); }
     .panel2 { background-image:url(img/2.jpg); }
     .panel3 { background-image:url(img/3.jpg); }
     .panel4 { background-image:url(img/4.jpg); }
     .panel5 { background-image:url(img/5.jpg); }
+
     /* Flex Items */
     .panel > * {
       margin:0;
@@ -78,8 +77,8 @@
       font-size:40px;
     }
   </style>
-
-
+</head>
+<body>
   <div class="panels">
     <div class="panel panel1">
       <p>Hey</p>
@@ -112,8 +111,12 @@
     const panels = document.querySelectorAll('.panel');
 
     function toggleOpen() {
-      panels.forEach(panel => panel.classList.remove('open'));
-      this.classList.toggle('open');
+      if(this.classList.contains('open')) {
+        this.classList.remove('open');
+      } else {
+        panels.forEach(panel => panel.classList.remove('open'));
+        this.classList.add('open');
+      }
     }
     function toggleActive(e) {
       console.log(e.propertyName);
@@ -124,6 +127,5 @@
     panels.forEach(panel => panel.addEventListener('click', toggleOpen));
     panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
-
 </body>
 </html>
