--- a/30-Day-Challenge/08 - Fun with HTML5 Canvas/index.html
+++ b/30-Day-Challenge/08 - Fun with HTML5 Canvas/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML5 Canvas</title>
+  <style>
+    canvas {
+      background: rgba(0, 0, 0, 0.2);
+    }
+  </style>
 </head>
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
@@ -14,7 +19,7 @@ canvas.height = window.innerHeight;
 ctx.strokeStyle = '#BADA55';
 ctx.lineJoin = 'round';
 ctx.lineCap = 'round';
-ctx.lineWidth = 100;
+ctx.lineWidth = 50;
 // ctx.globalCompositeOperation = 'multiply';
 let isDrawing = false;
 let lastX = 0;
@@ -23,7 +28,6 @@ let hue = 0;
 let direction = true;
 function draw(e) {
   if (!isDrawing) return; // stop the fn from running when they are not moused down
-  console.log(e);
   ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
   ctx.beginPath();
   // start from
@@ -36,7 +40,7 @@ function draw(e) {
   if (hue >= 360) {
     hue = 0;
   }
-  if (ctx.lineWidth >= 100 || ctx.lineWidth <= 1) {
+  if (ctx.lineWidth >= 50 || ctx.lineWidth <= 1) {
     direction = !direction;
   }
   if(direction) {
