--- a/30-Day-Challenge/07 - Array Cardio Day 2/index.html
+++ b/30-Day-Challenge/07 - Array Cardio Day 2/index.html
@@ -55,6 +55,8 @@
 
     const index = comments.findIndex(comment => comment.id === 823423);
     console.log(index);
+
+    // Delete the above comment and make new comments array.
     // comments.splice(index, 1);
     const newComments = [
       ...comments.slice(0, index),
