12th day challenge complete

--- a/references/arrays.html
+++ b/references/arrays.html
@@ -33,7 +33,7 @@
 		// If i is NaN, it is treated as if it were 0.
 		// If n is less than 0 or equal to NaN, it is treated as if it were 0.
 		// If i or n is greater than Array’s length, either argument will use the Array’s length
-        console.log('array.splice(args):      ' + array.splice(1, 1, 'SASS'));
+        // console.log('array.splice(args):      ' + array.splice(1, 1, 'SASS'));
         // console.log('array.splice(args):      ' + array.splice(NaN, 1, 'SASS')); 
         // console.log('array.splice(args):      ' + array.splice(-2, 1, 'SASS'));
         // console.log('array.splice(args):      ' + array.splice(1, 1, 'SASS', 'SCSS'));
