adding extra functionality

--- a/30-Day-Challenge/19 - Webcam Fun/index.html
+++ b/30-Day-Challenge/19 - Webcam Fun/index.html
@@ -13,18 +13,32 @@
       <div class="rgb">
         <label for="rmin">Red Min:</label>
         <input type="range" min=0 max=255 name="rmin">
+        <span id="rmin">-</span>
+
         <label for="rmax">Red Max:</label>
         <input type="range" min=0 max=255 name="rmax">
+        <span id="rmax">-</span>
+
         <br>
+
         <label for="gmin">Green Min:</label>
         <input type="range" min=0 max=255 name="gmin">
+        <span id="gmin">-</span>
+
         <label for="gmax">Green Max:</label>
         <input type="range" min=0 max=255 name="gmax">
+        <span id="gmax">-</span>
+
         <br>
+
         <label for="bmin">Blue Min:</label>
         <input type="range" min=0 max=255 name="bmin">
+        <span id="bmin">-</span>
+
         <label for="bmax">Blue Max:</label>
         <input type="range" min=0 max=255 name="bmax">
+        <span id="bmax">-</span>
+
       </div>
     </div>
 
