fetch default values functionality

--- a/30-Day-Challenge/19 - Webcam Fun/index.html
+++ b/30-Day-Challenge/19 - Webcam Fun/index.html
@@ -12,31 +12,31 @@
       <button onClick="takePhoto()">Take Photo</button>
       <div class="rgb">
         <label for="rmin">Red Min:</label>
-        <input type="range" min=0 max=255 name="rmin">
+        <input type="range" min=0 max=255 name="rmin" value="100">
         <span id="rmin">-</span>
 
         <label for="rmax">Red Max:</label>
-        <input type="range" min=0 max=255 name="rmax">
+        <input type="range" min=0 max=255 name="rmax" value="140">
         <span id="rmax">-</span>
 
         <br>
 
         <label for="gmin">Green Min:</label>
-        <input type="range" min=0 max=255 name="gmin">
+        <input type="range" min=0 max=255 name="gmin" value="150">
         <span id="gmin">-</span>
 
         <label for="gmax">Green Max:</label>
-        <input type="range" min=0 max=255 name="gmax">
+        <input type="range" min=0 max=255 name="gmax" value="200">
         <span id="gmax">-</span>
 
         <br>
 
         <label for="bmin">Blue Min:</label>
-        <input type="range" min=0 max=255 name="bmin">
+        <input type="range" min=0 max=255 name="bmin" value="10">
         <span id="bmin">-</span>
 
         <label for="bmax">Blue Max:</label>
-        <input type="range" min=0 max=255 name="bmax">
+        <input type="range" min=0 max=255 name="bmax" value="80">
         <span id="bmax">-</span>
 
       </div>
