--- a/algorithms/fizz-buzz/index.html
+++ b/algorithms/fizz-buzz/index.html
@@ -21,9 +21,9 @@
 		function fizzBuzz(num) {
 			for(let i = 1; i <= num; i++) {
 				// if(i%3 == 0 && i%5 == 0) console.log('Fizz Buzz');
-				if(i % 15 == 0) console.log('fizz buzz'); // same as above
-				else if(i % 3 == 0) console.log('fizz');
-				else if(i % 5 == 0) console.log('buzz');
+				if(i % 15 == 0) console.log('Fizz Buzz'); // same as above
+				else if(i % 3 == 0) console.log('Fizz');
+				else if(i % 5 == 0) console.log('Buzz');
 				else console.log(i);
 			}
 		}
