--- a/algorithms/harmless-ransom-note/harmless-ransom-note.html
+++ b/algorithms/harmless-ransom-note/harmless-ransom-note.html
@@ -55,7 +55,8 @@ function harmlessRansomNote (noteText, magazineText) {
 
 harmlessRansomNote('js js js', 'js easy js');
 
-// Time Complexity:  Since these loops are NOT nested we have a linear time complexity of O(n)
+// Time Complexity:  Since these loops are NOT nested we have a linear time complexity of 
+// O(n) or O(n) + O(m) or O(n + m)
 </script>
 </body>
 </html>
